--- a/Imitacion_de_Dic_Coffe-main/style/styles.css
+++ b/Imitacion_de_Dic_Coffe-main/style/styles.css
@@ -119,7 +119,7 @@ a {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 20px 0; /* Modificado para cumplir con el requisito */
+    margin: 20px; /* Modificado para cumplir con el requisito */
 }
 
 .menu_item_content h4 {
@@ -173,10 +173,10 @@ a {
     margin-bottom: 20px;
 }
 
-.footer {
-    background-color: #251e19;
-    color: white;
-    height: 75px;
+.section_footer {
+    background-color: #251e19; /* Fondo del pie de página */
+    color: white; /* Color del texto del pie de página */
+    height: 75px; /* Altura del pie de página */
     display: flex;
     justify-content: center;
     align-items: center;
